# bobetocalo_prl19RealTimeFacialAlignment

./: .gitignore  CMakeLists.txt  README.md
include/: FaceAlignmentPrl19.hpp  FaceDetectorOpencv.hpp  FaceHeadPoseOpencv.hpp
src/: .FaceAlignmentPrl19.cpp.swo  .FaceAlignmentPrl19.cpp.swp  FaceAlignmentPrl19.cpp  FaceDetectorTensorflow.cpp  FaceHeadPoseOpencv.cpp
test/: face_alignment_bobetocalo_prl19_test.cpp
